package presentation.CustomerManager;

import appUserManagement.domain.Role;
import applicationManagement.application.SelectInterviewModelController;
import jobOpeningManagement.application.DefineRecruitmentPhaseController;

public class DefineRecruitmentPhaseUI {

    private DefineRecruitmentPhaseController ctrl = new DefineRecruitmentPhaseController();
    static Role managerRole;

}
